# AnimationAssignment1

./: CMakeLists1.txt  readme.txt  sh.exe.stackdump
igl/opengl/: Movable.cpp  Movable.h  ViewerCore.cpp  ViewerData.cpp  ViewerData.h
igl/opengl/glfw/: Display.cpp  Display.h  Viewer.cpp  Viewer.h  renderer.cpp  renderer.h
tutorial/sandBox/: CMakeLists.txt  DetectCollision.cpp  DetectCollision.h  IK_solver.cpp  IK_solver.h  MyRenderer.cpp  MyRenderer.h  MyViewer.cpp  MyViewer.h  SoundManager.cpp  SoundManager.h  configuration.txt  detectCollision.cpp  detectCollision.h  inputManager.h  main.cpp  mesh_simplifier.cpp  mesh_simplifier.h
